inclus Image.c et son header

--- a/TecDev/makefile
+++ b/TecDev/makefile
@@ -1,5 +1,5 @@
-main: main.o grille.o grille.h 
-	gcc -Wall -g -o main main.o grille.o -lncurses
+main: main.o grille.o Image.o Image.h grille.h 
+	gcc -Wall -g -o main main.o grille.o Image.o -lncurses
 
 main.o: main.c grille.h 
 	gcc -Wall -g -c main.c -lncurses
@@ -8,6 +8,9 @@ main.o: main.c grille.h
 grille.o:grille.c grille.h 
 	gcc -Wall -g -c grille.c -lncurses
 	
+Image.o:Image.c Image.h 
+	gcc -Wall -g -c Image.c -lncurses
+
 clean:
 	rm -r *.o main
 	rm main
