ajout des flags etc...

--- a/TecDev/makefile
+++ b/TecDev/makefile
@@ -1,19 +1,25 @@
-main: main.o grille.o Image.o Image.h grille.h 
-	gcc -Wall -g -o main main.o grille.o Image.o -lncurses
+CC=gcc
+TARGET = logigraphe
+CFLAGS= -Wall -g
+LDFLAGS=
+
+ALL= 
+
+$(TARGET): main.o grille.o Image.o
+	$(CC)  -o main main.o grille.o Image.o -lncurses
 
 main.o: main.c grille.h 
-	gcc -Wall -g -c main.c -lncurses
+	$(CC) -Wall -g -c main.c $(CFLAGS)
 	
 
-grille.o:grille.c grille.h 
-	gcc -Wall -g -c grille.c -lncurses
+grille.o:grille.c  
+	$(CC) -Wall -g -c grille.c $(CFLAGS)
 	
-Image.o:Image.c Image.h 
-	gcc -Wall -g -c Image.c -lncurses
+Image.o:Image.c
+	$(CC) -Wall -g -c Image.c $(CFLAGS)
 
 clean:
 	rm -r *.o main
-	rm main
 	
 doxy: 
 	doxygen 
