fin premiere exo1 du tp1, il reste la fonction affichage sous forme de terme et affichage sous forme d'arbre

--- a/SDA_2/makefile
+++ b/SDA_2/makefile
@@ -2,11 +2,11 @@ CC=gcc
 CFLAGS= -Wall -g
 
 main:main.o arbin.o
-	$(CC) -o test $^ $(CFLAGS)
+	$(CC)  -o  $@ $^ $(CFLAGS)
 
 main.o:main.c arbin.h
-	$(CC) -c >$ $(CFLAGS)
+	$(CC) -c $< -o $@  $(CFLAGS)
 
 arbin.o: arbin.c arbin.h 
-	$(CC) -c >$ $(CFLAGS)
+	$(CC) -c $< -o $@ $(CFLAGS)
 
