--- a/PSR/TP2/makefile
+++ b/PSR/TP2/makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -g
 BIN = bin/
 
-all:exo2 exo4 
+all:exo2 exo4 exo5 exo6 exo7 exo8 exo9 exo9b 
 
 #exo1: exo1.c
 #	$(CC) -o $(BIN)$@ $< $(CFLAGS)
@@ -22,18 +22,23 @@ exo4: exo4.c
 #exo4b: exo4b.c
 #	$(CC) -o $(BIN)$@ $< $(CFLAGS)
 
-#exo5: exo5.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
+exo5: exo5.c
+	$(CC) -o $@ $< $(CFLAGS) -lm
 
-#exo6: exo6.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
+exo6: exo6.c
+	$(CC) -o $@ $< $(CFLAGS)
 
 #exo6b: exo6b.c
 #	$(CC) -o $(BIN)$@ $< $(CFLAGS)
 
-#exo7: exo7.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
+exo7: exo7.c
+	$(CC) -o $@ $< $(CFLAGS)
 
-#exo8: exo8.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
+exo8: exo8.c
+	$(CC) -o $@ $< $(CFLAGS)
 
+exo9: exo9.c
+	$(CC) -o $@ $< $(CFLAGS)
+
+exo9b: exo9b.c
+	$(CC) -o $@ $< $(CFLAGS)
