--- a/PSR/TP3/makefile
+++ b/PSR/TP3/makefile
@@ -2,16 +2,11 @@ CC = gcc
 CFLAGS = -Wall -g
 BIN = bin/
 
-all:exo2 exo3	exo4 
+all:exo2 exo3	exo4 exo5 
 
-#exo1: exo1.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
 
 exo2: exo2.c
 	$(CC) -o $@ $< $(CFLAGS)
-
-#exo2b: exo2b.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
 
 exo3: exo3.c
 	$(CC) -o $@ $< $(CFLAGS)
@@ -19,26 +14,6 @@ exo3: exo3.c
 exo4: exo4.c
 	$(CC) -o $@ $< $(CFLAGS)
 
-#exo4b: exo4b.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
+exo5: exo5.c
+	$(CC) -o $@ $< $(CFLAGS) 
 
-#exo5: exo5.c
-#	$(CC) -o $@ $< $(CFLAGS) -lm
-
-#exo6: exo6.c
-#	$(CC) -o $@ $< $(CFLAGS)
-
-#exo6b: exo6b.c
-#	$(CC) -o $(BIN)$@ $< $(CFLAGS)
-
-#exo7: exo7.c
-#	$(CC) -o $@ $< $(CFLAGS)
-
-#exo8: exo8.c
-#	$(CC) -o $@ $< $(CFLAGS)
-
-#exo9: exo9.c
-#	$(CC) -o $@ $< $(CFLAGS)
-
-#exo9b: exo9b.c
-#	$(CC) -o $@ $< $(CFLAGS)
