--- a/alinea/makefile
+++ b/alinea/makefile
@@ -3,7 +3,7 @@ CFLAGS=-Wall -g
 
 ALL:main
 
-main:main.o tp1.o determinant.o gauss.o inversion.o
+main:main.o tp1.o determinant.o gauss.o inversion.o resol.o
 	$(CC) $^ -o $@ $(CFLAGS) 
 
 main.o:main.c tp1.h	determinant.h
@@ -19,6 +19,9 @@ gauss.o:gauss.c gauss.h
 	$(CC) -c $< -o $@ $(CFLAGS) 
 
 inversion.o:inversion.c inversion.h
+	$(CC) -c $< -o $@ $(CFLAGS) 
+
+resol.o:resol.c resol.h
 	$(CC) -c $< -o $@ $(CFLAGS) 
 
 clean:
