--- a/IHM/TP1/makefile
+++ b/IHM/TP1/makefile
@@ -1,7 +1,7 @@
 CC = g++
 
-drawtri : main.o mainframe.o
-	$(CC) -o drawtri main.o mainframe.o `wx-config --libs`
+drawtri : main.o mainframe.o dialogs.o
+	$(CC) -o drawtri main.o mainframe.o dialogs.o `wx-config --libs`
 
 main.o : main.cpp 
 	$(CC) `wx-config --cxxflags` -c main.cpp -o main.o
@@ -9,7 +9,8 @@ main.o : main.cpp
 mainframe.o : mainframe.cpp
 	$(CC) `wx-config --cxxflags` -c mainframe.cpp -o mainframe.o
 
-
+dialogs.o: dialogs.cpp
+	$(CC) `wx-config --cxxflags` -c dialogs.cpp -o dialogs.o
 
 
 
