--- a/IHM/TP1/makefile
+++ b/IHM/TP1/makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS="-g -Wall" 
+CFLAGS=-Wall -g
 
 drawtri : main.o mainframe.o dialogs.o openglcanvas.o
 	$(CC) -o drawtri main.o mainframe.o dialogs.o openglcanvas.o `wx-config --libs --gl-libs`
@@ -7,14 +7,15 @@ drawtri : main.o mainframe.o dialogs.o openglcanvas.o
 main.o : main.cpp 
 	$(CC) `wx-config --cxxflags` -c main.cpp -o main.o ${CFLAGS}
 
+openglcanvas.o: openglcanvas.cpp
+	$(CC) `wx-config --cxxflags` -c openglcanvas.cpp -o openglcanvas.o ${CFLAGS}
+
 mainframe.o : mainframe.cpp
 	$(CC) `wx-config --cxxflags` -c mainframe.cpp -o mainframe.o ${CFLAGS}
 
 dialogs.o: dialogs.cpp
 	$(CC) `wx-config --cxxflags` -c dialogs.cpp -o dialogs.o ${CFLAGS}
 
-openglcanvas.o: openglcanvas.cpp
-	$(CC) `wx-config --cxxflags` -c openglcanvas.cpp -o openglcanvas.o ${CFLAGS}
 
 
 
