--- a/IHM/TP1/makefile
+++ b/IHM/TP1/makefile
@@ -1,8 +1,8 @@
 CC = g++
 CFLAGS=-Wall -g
 
-drawtri : main.o mainframe.o dialogs.o openglcanvas.o
-	$(CC) -o drawtri main.o mainframe.o dialogs.o openglcanvas.o `wx-config --libs --gl-libs`
+drawtri : main.o mainframe.o dialogs.o openglcanvas.o triangle.o
+	$(CC) -o drawtri main.o mainframe.o dialogs.o  triangle.o openglcanvas.o `wx-config --libs --gl-libs`
 
 main.o : main.cpp 
 	$(CC) `wx-config --cxxflags` -c main.cpp -o main.o ${CFLAGS}
@@ -16,7 +16,8 @@ mainframe.o : mainframe.cpp
 dialogs.o: dialogs.cpp
 	$(CC) `wx-config --cxxflags` -c dialogs.cpp -o dialogs.o ${CFLAGS}
 
-
+triangle.o: triangle.cpp
+	$(CC) `wx-config --cxxflags` -c triangle.cpp -o triangle.o ${CFLAGS}
 
 
 clean : 
