reste deux trois truc a clener/commenter

--- a/3D/3D/Projet/Extrusion/makefile
+++ b/3D/3D/Projet/Extrusion/makefile
@@ -5,8 +5,8 @@ EXEC = Extrusion
 
 CC = gcc
 
-CFLAGS = -O0 -g -I/usr/X11R6/include -IGL -Wall
-LDFLAGS = -L/usr/X11R6/lib -lglut -lGL -lGLU -lm
+CFLAGS = -O0 -g -I/usr/X11R6/include -IGL -Wall -fopenmp
+LDFLAGS = -L/usr/X11R6/lib -lglut -lGL -lGLU -lm -fopenmp
 
 all : $(EXEC)
 
