--- a/IA/makefile
+++ b/IA/makefile
@@ -1,5 +1,5 @@
 CFLAGS = -Wall -g -O0
-CC = gcc
+CC = g++
 LDFLAGS=-lm 
 INC_PATH = include
 SRC_PATH = src
@@ -9,8 +9,8 @@ VPATH = src:include:objets:bin
 
 ALL: main
 
-main : entropy.o bmpfile.o main.o quicksort.o genetic.o
-	gcc $(CFLAGS) -o $@ $(OBJ_PATH)/entropy.o $(OBJ_PATH)/main.o $(OBJ_PATH)/bmpfile.o $(OBJ_PATH)/quicksort.o $(OBJ_PATH)/genetic.o $(LDFLAGS) 
+main : entropy.o  main.o quicksort.o genetic.o
+	$(CC) $(CFLAGS) -o $@ $(OBJ_PATH)/entropy.o $(OBJ_PATH)/main.o  $(OBJ_PATH)/quicksort.o $(OBJ_PATH)/genetic.o $(LDFLAGS) 
 	@mv $@ bin/.
 
 %.o : %.c
