--- a/compil/TP2/exo2/makefile
+++ b/compil/TP2/exo2/makefile
@@ -1,13 +1,13 @@
 ALL:analyzer
 
 analyzer: y.tab.c lex.yy.c
-	gcc y.tab.c lex.yy.c -o exo1 -ly -lfl
+	gcc y.tab.c lex.yy.c -o exo3 -ly -lfl
 
-lex.yy.c: exo1.l 
-	lex exo1.l
+lex.yy.c: exo3.l 
+	lex exo3.l
 
-y.tab.c: exo1.y
-	yacc -v -d exo1.y
+y.tab.c: exo3.y
+	yacc -v -d exo3.y
 
 clean:
-	rm exo1 y.tab.c
+	rm exo3 y.output lex.yy.c y.tab.* 
