--- a/Hadoop/Project/front/package.json
+++ b/Hadoop/Project/front/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "0.1.22",
+    "chart.js": "^1.0.2",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
