--- a/Hadoop/Project/front/package.json
+++ b/Hadoop/Project/front/package.json
@@ -8,6 +8,7 @@
     "async": "0.1.22",
     "chart.js": "^1.0.2",
     "ejs": "~0.8.4",
+    "fs-extra": "^0.26.3",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
